@@ -1,16 +1,12 @@
 package com.justin.teaorderservice.modules.order;
 
 import com.justin.teaorderservice.infra.exception.ComplexException;
-import com.justin.teaorderservice.infra.exception.ErrorCode;
-import com.justin.teaorderservice.infra.exception.ResponseError;
 import com.justin.teaorderservice.modules.member.Member;
 import com.justin.teaorderservice.modules.member.MemberAdapter;
-import com.justin.teaorderservice.modules.tea.TeaService;
 import com.justin.teaorderservice.modules.teaorder.TeaOrderService;
 import com.justin.teaorderservice.modules.teaorder.request.RequestItemOrder;
 import com.justin.teaorderservice.modules.order.request.RequestItemPurchase;
 import com.justin.teaorderservice.modules.order.response.ResponseOrder;
-import com.justin.teaorderservice.modules.tea.Tea;
 import com.justin.teaorderservice.modules.teaorder.response.ResponseTeaOrder;
 import com.justin.teaorderservice.modules.teaorder.TeaOrder;
 import io.swagger.v3.oas.annotations.Operation;
@@ -27,17 +23,12 @@ import org.springframework.security.core.annotation.AuthenticationPrincipal;
 import org.springframework.stereotype.Controller;
 import org.springframework.validation.annotation.Validated;
 import org.springframework.web.bind.annotation.*;
-
-import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
-
 @Slf4j
 @Controller
 @RequestMapping("/api/order/v1/orders")
 @RequiredArgsConstructor
 public class OrderApiController {
-    private final TeaService teaService;
     private final OrderService orderService;
     private final TeaOrderService teaOrderService;
 
@@ -52,33 +43,15 @@ public class OrderApiController {
     public ResponseEntity<ResponseOrder> orderDetail(@PathVariable long orderId, @AuthenticationPrincipal MemberAdapter memberAdapter) throws ComplexException {
         Member member = memberAdapter.getMember();
         Order order = orderService.findByUserIdAndId(member.getId(), orderId);
+        ResponseOrder responseOrder = null;
 
-        if(order == null){
-            ResponseError responseError = ResponseError.builder()
-                    .errorCode(ErrorCode.NO_MATCH_ORDER_ID_WITH_USER_ID)
-                    .target(member.getPhoneNumber())
-                    .build();
-            throw new ComplexException(responseError);
+        if(order != null){
+            List<TeaOrder> teaOrders = teaOrderService.findByOrderId(orderId);
+            List<ResponseTeaOrder> responseTeaOrders = teaOrders.stream()
+                    .map(ResponseTeaOrder::createResponseTeaOrder)
+                    .toList();
+            responseOrder = ResponseOrder.createResponseOrder(orderId, member.getMemberName(), responseTeaOrders);
         }
-
-        List<TeaOrder> teaOrderList = teaOrderService.findByOrderId(order.getId());
-        List<ResponseTeaOrder> responseTeaOrderList = new ArrayList<>();
-        teaOrderList.stream().forEach(teaOrder -> {
-            ResponseTeaOrder responseTeaOrder = ResponseTeaOrder.builder()
-                    .id(teaOrder.getTeaId())
-                    .orderQuantity(teaOrder.getQuantity())
-                    .price(teaOrder.getPrice())
-                    .quantity(teaOrder.getQuantity())
-                    .teaName(teaOrder.getTeaName())
-                    .build();
-            responseTeaOrderList.add(responseTeaOrder);
-        });
-
-        ResponseOrder responseOrder = ResponseOrder.builder()
-                .id(order.getId())
-                .teaOrderList(responseTeaOrderList)
-                .userId(order.getUserId())
-                .build();
         return ResponseEntity.status(HttpStatus.OK).body(responseOrder);
     }
 
@@ -96,7 +69,7 @@ public class OrderApiController {
         List<TeaOrder> teaOrders = requestItemOrders.stream()
                 .filter(requestItemOrder -> requestItemOrder.getOrderQuantity() != null && requestItemOrder.getOrderQuantity() != 0)
                 .map(requestItemOrder -> teaOrderService.teaOrder(requestItemOrder.getId(), requestItemOrder.getPrice(), requestItemOrder.getOrderQuantity()))
-                .collect(Collectors.toList());
+                .toList();
         Long orderId = orderService.order(member.getId(), teaOrders.toArray(TeaOrder[]::new));
         return ResponseEntity.status(HttpStatus.OK).body(orderId.toString());
     }
