@@ -2,7 +2,6 @@ package com.justin.teaorderservice.modules.order;
 
 import com.justin.teaorderservice.infra.argumentresolver.Login;
 import com.justin.teaorderservice.modules.member.Member;
-import com.justin.teaorderservice.modules.tea.TeaService;
 import com.justin.teaorderservice.modules.teaorder.TeaOrderService;
 import com.justin.teaorderservice.modules.teaorder.form.ItemOrderForm;
 import com.justin.teaorderservice.modules.order.form.ItemPurchaseForm;
@@ -10,14 +9,12 @@ import com.justin.teaorderservice.modules.tea.Tea;
 import com.justin.teaorderservice.modules.teaorder.TeaOrder;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
 import org.springframework.validation.BindingResult;
 import org.springframework.validation.annotation.Validated;
 import org.springframework.web.bind.annotation.*;
 import org.springframework.web.servlet.mvc.support.RedirectAttributes;
-
 import java.util.ArrayList;
 import java.util.List;
 import java.util.stream.Collectors;
@@ -32,10 +29,8 @@ import java.util.stream.Collectors;
 @RequiredArgsConstructor
 public class OrderViewController {
 
-    private final TeaService teaService;
     private final OrderService orderService;
     private final TeaOrderService teaOrderService;
-    private final ModelMapper modelMapper;
 
     /**
      * @param loginMember 사용자 Session
@@ -72,12 +67,11 @@ public class OrderViewController {
     public String orderDetail(@Login Member loginMember, @PathVariable long orderId, Model model) {
         Order order = orderService.findByUserIdAndId(loginMember.getId(), orderId);
         if (order != null) {
-            List<TeaOrder> teaOrderList = teaOrderService.findByOrderId(orderId);
-            ItemPurchaseForm itemPurchaseForm = modelMapper.map(order, ItemPurchaseForm.class);
-            List<ItemOrderForm> itemOrderFormList = teaOrderList.stream()
+            List<TeaOrder> teaOrders = teaOrderService.findByOrderId(orderId);
+            List<ItemOrderForm> itemOrderFormList = teaOrders.stream()
                     .map(ItemOrderForm::createItemOrderForm)
                     .collect(Collectors.toList());
-            itemPurchaseForm.setItemOrderFormList(itemOrderFormList);
+            ItemPurchaseForm itemPurchaseForm = ItemPurchaseForm.createItemPurchaseForm(orderId, loginMember.getMemberName(), itemOrderFormList);
             model.addAttribute("itemPurchaseForm", itemPurchaseForm);
         }
         return "order/v1/order";
@@ -102,7 +96,7 @@ public class OrderViewController {
         List<TeaOrder> teaOrders = itemOrderFormList.stream()
                 .filter(itemOrderForm -> itemOrderForm.getOrderQuantity() != null && itemOrderForm.getOrderQuantity() != 0)
                 .map(itemOrderForm -> teaOrderService.teaOrder(itemOrderForm.getId(), itemOrderForm.getPrice(), itemOrderForm.getOrderQuantity()))
-                .collect(Collectors.toList());
+                .toList();
         Long orderId = orderService.order(memberId, teaOrders.toArray(TeaOrder[]::new));
 
         redirectAttributes.addAttribute("orderId", orderId);
